add note to eager order response